--- a/gns3/modules/docker/ui/docker_vm_configuration_page.ui
+++ b/gns3/modules/docker/ui/docker_vm_configuration_page.ui
@@ -35,13 +35,23 @@
         <widget class="QLineEdit" name="uiNameLineEdit"/>
        </item>
        <item row="1" column="0">
+        <widget class="QLabel" name="uiCMDLabel">
+         <property name="text">
+          <string>CMD:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QLineEdit" name="uiCMDLineEdit"/>
+       </item>
+       <item row="2" column="0">
         <widget class="QLabel" name="uiImageListLabel">
          <property name="text">
           <string>Image name:</string>
          </property>
         </widget>
        </item>
-       <item row="1" column="1">
+       <item row="2" column="1">
         <widget class="QComboBox" name="uiImageListComboBox">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
